Grace/tests/gibbs/errors/t242.grace
// ERROR = P1040
if (false) then {
    print "false"
} elseif true) then {
    print "true"
}
